# Barfmeister

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
bois/2020/: 179106551028514816.csv
cogs/: barf.py  purge.py  server.py
common/: bois_functions.py  bot_logger.py  helper_functions.py  manage_barf_files.py  server_functions.py
